<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signupHeaderDiv"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <TextView
            android:id="@+id/signupTitleLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/crear_cuenta"
            android:textColor="@color/accent"
            android:textColorHint="@color/accent_200"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signupDescriptionLbl"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/inter_medium"
            android:text="Ingresa tus datos para crear tu cuenta de Xreader y en menos de lo que crees podrás acceder a nuestros servicios.'"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textColorHint="@color/accent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupTitleLbl" />@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="123dp" />@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/signupNameTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"

            android:layout_marginEnd="32dp"
            android:background="@drawable/gray_entry"
            android:drawableLeft="@drawable/user24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:fontFamily="@font/inter_light"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:textColor="@color/accent"
            android:textColorHint="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signupPasswordTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/gray_entry"
            android:drawableLeft="@drawable/key24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/accent"
            android:textColorHint="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupUserTxt" />

        <EditText
            android:id="@+id/signupUserTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/gray_entry"
            android:drawableLeft="@drawable/user24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:fontFamily="@font/inter_light"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:textColor="@color/accent"
            android:textColorHint="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupNameTxt" />

        <Button
            android:id="@+id/signupToLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/iniciar_sesi_n"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupSignupBtn" />

        <Button
            android:id="@+id/signupSignupBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/white_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/crear_cuenta"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPasswordTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>